; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/src/extr_dump.c_write_lv_sym_table.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/src/extr_dump.c_write_lv_sym_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MRB_DUMP_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32**, i32*, i64)* @write_lv_sym_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_lv_sym_table(i32* %0, i32** %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %13 = load i32**, i32*** %6, align 8
  %14 = load i32*, i32** %13, align 8
  store i32* %14, i32** %9, align 8
  %15 = load i64, i64* %8, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = call i32 @uint32_to_bin(i64 %15, i32* %16)
  %18 = load i32*, i32** %9, align 8
  %19 = sext i32 %17 to i64
  %20 = getelementptr inbounds i32, i32* %18, i64 %19
  store i32* %20, i32** %9, align 8
  store i64 0, i64* %10, align 8
  br label %21

21:                                               ; preds = %46, %4
  %22 = load i64, i64* %10, align 8
  %23 = load i64, i64* %8, align 8
  %24 = icmp ult i64 %22, %23
  br i1 %24, label %25, label %49

25:                                               ; preds = %21
  %26 = load i32*, i32** %5, align 8
  %27 = load i32*, i32** %7, align 8
  %28 = load i64, i64* %10, align 8
  %29 = getelementptr inbounds i32, i32* %27, i64 %28
  %30 = load i32, i32* %29, align 4
  %31 = call i8* @mrb_sym2name_len(i32* %26, i32 %30, i64* %12)
  store i8* %31, i8** %11, align 8
  %32 = load i64, i64* %12, align 8
  %33 = trunc i64 %32 to i32
  %34 = load i32*, i32** %9, align 8
  %35 = call i32 @uint16_to_bin(i32 %33, i32* %34)
  %36 = load i32*, i32** %9, align 8
  %37 = sext i32 %35 to i64
  %38 = getelementptr inbounds i32, i32* %36, i64 %37
  store i32* %38, i32** %9, align 8
  %39 = load i32*, i32** %9, align 8
  %40 = load i8*, i8** %11, align 8
  %41 = load i64, i64* %12, align 8
  %42 = call i32 @memcpy(i32* %39, i8* %40, i64 %41)
  %43 = load i64, i64* %12, align 8
  %44 = load i32*, i32** %9, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 %43
  store i32* %45, i32** %9, align 8
  br label %46

46:                                               ; preds = %25
  %47 = load i64, i64* %10, align 8
  %48 = add i64 %47, 1
  store i64 %48, i64* %10, align 8
  br label %21

49:                                               ; preds = %21
  %50 = load i32*, i32** %9, align 8
  %51 = load i32**, i32*** %6, align 8
  store i32* %50, i32** %51, align 8
  %52 = load i32, i32* @MRB_DUMP_OK, align 4
  ret i32 %52
}

declare dso_local i32 @uint32_to_bin(i64, i32*) #1

declare dso_local i8* @mrb_sym2name_len(i32*, i32, i64*) #1

declare dso_local i32 @uint16_to_bin(i32, i32*) #1

declare dso_local i32 @memcpy(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
